правка путей изображений

--- a/stylus/blocks/contacts.styl
+++ b/stylus/blocks/contacts.styl
@@ -79,7 +79,7 @@ a.contacts__contact-mail
     position absolute
     top 11px
     right 10px
-    background url(/img/sprites/spritesheet.png) -5px -303px
+    background url(../img/sprites/spritesheet.png) -5px -303px
 
   &--city::before
     content ""
@@ -89,7 +89,7 @@ a.contacts__contact-mail
     position absolute
     top 11px
     right 13px
-    background url(/img/sprites/spritesheet.png) -5px -104px
+    background url(../img/sprites/spritesheet.png) -5px -104px
 
   &--client-mail::before
     content ""
@@ -99,7 +99,7 @@ a.contacts__contact-mail
     position absolute
     top 14px
     right 10px
-    background url(/img/sprites/spritesheet.png) -5px -280px
+    background url(../img/sprites/spritesheet.png) -5px -280px
 
   &--client-tel::before
     content ""
@@ -109,7 +109,7 @@ a.contacts__contact-mail
     position absolute
     top 8px
     right 14px
-    background url(/img/sprites/spritesheet.png) -5px -332px
+    background url(../img/sprites/spritesheet.png) -5px -332px
 
   input
     width 345px
