--- a/stylus/blocks/extra-menu.styl
+++ b/stylus/blocks/extra-menu.styl
@@ -34,7 +34,7 @@
           position absolute
           top 1px
           left -30px
-          background url(/img/sprites/spritesheet.png) -5px -183px
+          background url(../img/sprites/spritesheet.png) -5px -183px
 
   &--storage-photo
     .extra-menu__descript
@@ -47,7 +47,7 @@
           position absolute
           top -1px
           left -30px
-          background url(/img/sprites/spritesheet.png) -5px -364px
+          background url(../img/sprites/spritesheet.png) -5px -364px
 
   &--see-catalog
     .extra-menu__descript
@@ -60,4 +60,4 @@
           position absolute
           top -1px
           left -30px
-          background url(/img/sprites/spritesheet.png) -5px -388px
+          background url(../img/sprites/spritesheet.png) -5px -388px
