--- a/stylus/blocks/login-form.styl
+++ b/stylus/blocks/login-form.styl
@@ -44,7 +44,7 @@
     position absolute
     top -1px
     left -33px
-    background url(/img/sprites/spritesheet.png) -5px -252px
+    background url(../img/sprites/spritesheet.png) -5px -252px
 
 .login-form__input-area
   display flex
