--- a/stylus/blocks/main-footer.styl
+++ b/stylus/blocks/main-footer.styl
@@ -35,7 +35,7 @@
       position absolute
       top 4px
       left 135px
-      background url(/img/sprites/spritesheet.png) -5px -134px
+      background url(../img/sprites/spritesheet.png) -5px -134px
 
   &--contacts
     width 50%
@@ -48,7 +48,7 @@
       position absolute
       top 6px
       left 148px
-      background url(/img/sprites/spritesheet.png) -5px -29px
+      background url(../img/sprites/spritesheet.png) -5px -29px
   p,
   a
     Roboto(400, 12px)
@@ -119,28 +119,28 @@
   &--twitter::before
     width 17px
     height 14px
-    background url(/img/sprites/spritesheet.png) 0px -539px
+    background url(../img/sprites/spritesheet.png) 0px -539px
   &--facebook::before
     width 8px
     height 16px
-    background url(/img/sprites/spritesheet.png) 0px -457px
+    background url(../img/sprites/spritesheet.png) 0px -457px
   &--linkedin::before
     width 14px
     height 15px
-    background url(/img/sprites/spritesheet.png) 0px -489px
+    background url(../img/sprites/spritesheet.png) 0px -489px
   &--instagram::before
     width 17px
     height 16px
-    background url(/img/sprites/spritesheet.png) 0px -505px
+    background url(../img/sprites/spritesheet.png) 0px -505px
   &--youtube::before
     width 17px
     height 12px
-    background url(/img/sprites/spritesheet.png) 0px -554px
+    background url(../img/sprites/spritesheet.png) 0px -554px
   &--google::before
     width 17px
     height 14px
-    background url(/img/sprites/spritesheet.png) 0px -474px
+    background url(../img/sprites/spritesheet.png) 0px -474px
   &--pinterest::before
     width 14px
     height 16px
-    background url(/img/sprites/spritesheet.png) 0px -522px
+    background url(../img/sprites/spritesheet.png) 0px -522px
