--- a/stylus/blocks/main-header.styl
+++ b/stylus/blocks/main-header.styl
@@ -27,7 +27,7 @@
     position absolute
     top 3px
     right 20px
-    background url(/img/sprites/spritesheet.png) -5px -229px
+    background url(../img/sprites/spritesheet.png) -5px -229px
 
 
 .main-header__login
