--- a/stylus/blocks/personal-area.styl
+++ b/stylus/blocks/personal-area.styl
@@ -28,7 +28,7 @@
     position absolute
     top -1px
     right -21px
-    background url(/img/sprites/spritesheet.png) -5px -207px
+    background url(../img/sprites/spritesheet.png) -5px -207px
 
 .personal-area__data-item
   display flex
@@ -61,7 +61,7 @@
   position absolute
   top 2px
   right 6px
-  background url(/img/sprites/spritesheet.png) -5px -439px
+  background url(../img/sprites/spritesheet.png) -5px -439px
 
 .personal-area__basket::before
   content ""
@@ -71,4 +71,4 @@
   position absolute
   top 0px
   right 0px
-  background url(/img/sprites/spritesheet.png) -5px -5px
+  background url(../img/sprites/spritesheet.png) -5px -5px
