--- a/stylus/blocks/scroll-top-btn.styl
+++ b/stylus/blocks/scroll-top-btn.styl
@@ -23,4 +23,4 @@
     right 0
     bottom 0
     margin: auto;
-    background url(/img/sprites/spritesheet.png) -5px -414px
+    background url(../img/sprites/spritesheet.png) -5px -414px
