--- a/templates/index.jade
+++ b/templates/index.jade
@@ -49,7 +49,7 @@ html(lang="ru")
         input(type="radio" name="slider-switch")
       .main-slider__inner-container
 
-        .main-slider__slide
+        .main-slider__slide(style="background: #a48e80 url(./img/slide-1bg.jpg);")
           .main-slider__slide-heading Дилер
           .main-slider__slide-descript Новые коллекции Kerama Marazzi
           .main-slider__links-container
