--- a/builds/css/style.css
+++ b/builds/css/style.css
@@ -276,7 +276,7 @@ body {
   position: absolute;
   top: -1px;
   left: -33px;
-  background: url("/img/sprites/spritesheet.png") -5px -252px;
+  background: url("../img/sprites/spritesheet.png") -5px -252px;
 }
 .login-form__input-area {
   display: -webkit-box;
@@ -480,7 +480,7 @@ body {
   position: absolute;
   top: 1px;
   left: -30px;
-  background: url("/img/sprites/spritesheet.png") -5px -183px;
+  background: url("../img/sprites/spritesheet.png") -5px -183px;
 }
 .extra-menu__item--storage-photo .extra-menu__descript div::before {
   content: "";
@@ -490,7 +490,7 @@ body {
   position: absolute;
   top: -1px;
   left: -30px;
-  background: url("/img/sprites/spritesheet.png") -5px -364px;
+  background: url("../img/sprites/spritesheet.png") -5px -364px;
 }
 .extra-menu__item--see-catalog .extra-menu__descript div::before {
   content: "";
@@ -500,7 +500,7 @@ body {
   position: absolute;
   top: -1px;
   left: -30px;
-  background: url("/img/sprites/spritesheet.png") -5px -388px;
+  background: url("../img/sprites/spritesheet.png") -5px -388px;
 }
 .main-footer {
   display: -webkit-box;
@@ -549,7 +549,7 @@ body {
   position: absolute;
   top: 4px;
   left: 135px;
-  background: url("/img/sprites/spritesheet.png") -5px -134px;
+  background: url("../img/sprites/spritesheet.png") -5px -134px;
 }
 .main-footer__info-item--contacts {
   width: 50%;
@@ -563,7 +563,7 @@ body {
   position: absolute;
   top: 6px;
   left: 148px;
-  background: url("/img/sprites/spritesheet.png") -5px -29px;
+  background: url("../img/sprites/spritesheet.png") -5px -29px;
 }
 .main-footer__info-item p,
 .main-footer__info-item a {
@@ -649,37 +649,37 @@ body {
 .main-footer__social-link--twitter::before {
   width: 17px;
   height: 14px;
-  background: url("/img/sprites/spritesheet.png") 0px -539px;
+  background: url("../img/sprites/spritesheet.png") 0px -539px;
 }
 .main-footer__social-link--facebook::before {
   width: 8px;
   height: 16px;
-  background: url("/img/sprites/spritesheet.png") 0px -457px;
+  background: url("../img/sprites/spritesheet.png") 0px -457px;
 }
 .main-footer__social-link--linkedin::before {
   width: 14px;
   height: 15px;
-  background: url("/img/sprites/spritesheet.png") 0px -489px;
+  background: url("../img/sprites/spritesheet.png") 0px -489px;
 }
 .main-footer__social-link--instagram::before {
   width: 17px;
   height: 16px;
-  background: url("/img/sprites/spritesheet.png") 0px -505px;
+  background: url("../img/sprites/spritesheet.png") 0px -505px;
 }
 .main-footer__social-link--youtube::before {
   width: 17px;
   height: 12px;
-  background: url("/img/sprites/spritesheet.png") 0px -554px;
+  background: url("../img/sprites/spritesheet.png") 0px -554px;
 }
 .main-footer__social-link--google::before {
   width: 17px;
   height: 14px;
-  background: url("/img/sprites/spritesheet.png") 0px -474px;
+  background: url("../img/sprites/spritesheet.png") 0px -474px;
 }
 .main-footer__social-link--pinterest::before {
   width: 14px;
   height: 16px;
-  background: url("/img/sprites/spritesheet.png") 0px -522px;
+  background: url("../img/sprites/spritesheet.png") 0px -522px;
 }
 .main-header {
   display: -webkit-box;
@@ -714,7 +714,7 @@ body {
   position: absolute;
   top: 3px;
   right: 20px;
-  background: url("/img/sprites/spritesheet.png") -5px -229px;
+  background: url("../img/sprites/spritesheet.png") -5px -229px;
 }
 .main-header__login {
   margin-right: 13px;
@@ -854,7 +854,6 @@ li:hover a {
   width: 100%;
   height: 335px;
   padding: 52px 0 0 0;
-  background: #a48e80 url("/img/slide-1bg.jpg");
 }
 .main-slider__slide-heading {
   font-family: "Roboto", "Arial", sans-serif;
@@ -1215,7 +1214,7 @@ li:hover a {
   position: absolute;
   top: -1px;
   right: -21px;
-  background: url("/img/sprites/spritesheet.png") -5px -207px;
+  background: url("../img/sprites/spritesheet.png") -5px -207px;
 }
 .personal-area__data-item {
   display: -webkit-box;
@@ -1254,7 +1253,7 @@ li:hover a {
   position: absolute;
   top: 2px;
   right: 6px;
-  background: url("/img/sprites/spritesheet.png") -5px -439px;
+  background: url("../img/sprites/spritesheet.png") -5px -439px;
 }
 .personal-area__basket::before {
   content: "";
@@ -1264,7 +1263,7 @@ li:hover a {
   position: absolute;
   top: 0px;
   right: 0px;
-  background: url("/img/sprites/spritesheet.png") -5px -5px;
+  background: url("../img/sprites/spritesheet.png") -5px -5px;
 }
 .catalog-header {
   width: 100%;
@@ -1383,7 +1382,7 @@ li:hover a {
   position: absolute;
   top: 8px;
   left: 8px;
-  background: url("/img/sprites/spritesheet.png") -5px -77px;
+  background: url("..../img/sprites/spritesheet.png") -5px -77px;
 }
 .catalog__filter-area {
   display: -webkit-box;
@@ -2140,7 +2139,7 @@ a.contacts__contact-mail {
   position: absolute;
   top: 11px;
   right: 10px;
-  background: url("/img/sprites/spritesheet.png") -5px -303px;
+  background: url("../img/sprites/spritesheet.png") -5px -303px;
 }
 .contacts__input-container--city::before {
   content: "";
@@ -2150,7 +2149,7 @@ a.contacts__contact-mail {
   position: absolute;
   top: 11px;
   right: 13px;
-  background: url("/img/sprites/spritesheet.png") -5px -104px;
+  background: url("../img/sprites/spritesheet.png") -5px -104px;
 }
 .contacts__input-container--client-mail::before {
   content: "";
@@ -2160,7 +2159,7 @@ a.contacts__contact-mail {
   position: absolute;
   top: 14px;
   right: 10px;
-  background: url("/img/sprites/spritesheet.png") -5px -280px;
+  background: url("../img/sprites/spritesheet.png") -5px -280px;
 }
 .contacts__input-container--client-tel::before {
   content: "";
@@ -2170,7 +2169,7 @@ a.contacts__contact-mail {
   position: absolute;
   top: 8px;
   right: 14px;
-  background: url("/img/sprites/spritesheet.png") -5px -332px;
+  background: url("../img/sprites/spritesheet.png") -5px -332px;
 }
 .contacts__input-container input {
   width: 345px;
@@ -2460,7 +2459,7 @@ a.contacts__contact-mail {
   right: 0;
   bottom: 0;
   margin: auto;
-  background: url("/img/sprites/spritesheet.png") -5px -414px;
+  background: url("../img/sprites/spritesheet.png") -5px -414px;
 }
 .orders {
   background: #fafafa;
@@ -2497,7 +2496,7 @@ a.contacts__contact-mail {
   position: absolute;
   top: 8px;
   left: 8px;
-  background: url("/img/sprites/spritesheet.png") -5px -77px;
+  background: url("../img/sprites/spritesheet.png") -5px -77px;
 }
 .orders__search-value input[type="text"] {
   width: 586px;
