--- a/stylus/blocks/catalog.styl
+++ b/stylus/blocks/catalog.styl
@@ -40,7 +40,7 @@
     position absolute
     top 8px
     left 8px
-    background url(/img/sprites/spritesheet.png) -5px -77px
+    background url(..../img/sprites/spritesheet.png) -5px -77px
 
 .catalog__filter-area
   display flex
