--- a/stylus/blocks/orders.styl
+++ b/stylus/blocks/orders.styl
@@ -29,7 +29,7 @@
       position absolute
       top 8px
       left 8px
-      background url(/img/sprites/spritesheet.png) -5px -77px
+      background url(../img/sprites/spritesheet.png) -5px -77px
   input[type="text"]
     width 586px
     padding 13px 40px 13px 25px
