--- a/templates/catalog.jade
+++ b/templates/catalog.jade
@@ -11,7 +11,7 @@ html(lang="ru")
     link(href="https://fonts.googleapis.com/css?family=Roboto:300&amp;subset=cyrillic" rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Roboto:400i&amp;subset=cyrillic" rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Roboto:500&amp;subset=cyrillic" rel="stylesheet")
-    script(type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js")
+    script(type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js")
     title Мосплитка
   body
     a(href="#top").scroll-top-btn
