--- a/templates/catalog.jade
+++ b/templates/catalog.jade
@@ -17,7 +17,7 @@ html(lang="ru")
     a(href="#top").scroll-top-btn
     a(name="top")
     header.main-header
-      a.main-logo(href="/" title="#")
+      a.main-logo(href="index.html" title="#")
         img(src="./img/header-logo.png" width="182" height="22" alt="Лого. Ссылка на главную страницу")
       nav
         ul.main-nav
@@ -37,7 +37,7 @@ html(lang="ru")
       a.main-header__call-us(href="tel:+78002501080" title="#") 8 800 250 10 80
       .main-header__custom-actions
         a.main-header__search(href="#" title="#")
-        a.main-header__login(href="#" title="#") Вход
+        a.main-header__login(href="orders.html" title="#") Вход
         a.main-header__my-basket(href="#" title="#") 0
 
     .page-heading(style="background: #b09e8a url(img/catalog-h-bg.jpg)")
@@ -681,7 +681,7 @@ html(lang="ru")
 
     footer.main-footer
       section.main-footer__info-container
-        a.main-footer__logo(href="/" title="#")
+        a.main-footer__logo(href="index.html" title="#")
           img(src="img/footer-logo.png" width="372" height="45" alt="Лого. Переход на главную страницу")
         .main-footer__info-content
 
@@ -701,7 +701,7 @@ html(lang="ru")
           .main-footer__copyright 	&copy; Copyright 2017
           ul.main-footer__nav
             li
-              a(href="/" title="#") О компании
+              a(href="index.html" title="#") О компании
             li
               a(href="contacts.html" title="#") Адрес
             li
