--- a/templates/index.jade
+++ b/templates/index.jade
@@ -16,7 +16,7 @@ html(lang="ru")
     a(href="#top").scroll-top-btn
     a(name="top")
     header.main-header
-      a.main-logo(href="/" title="#")
+      a.main-logo(href="#" title="#")
         img(src="./img/header-logo.png" width="182" height="22" alt="Лого. Ссылка на главную страницу")
       nav  
         ul.main-nav
@@ -230,7 +230,7 @@ html(lang="ru")
 
     footer.main-footer
       section.main-footer__info-container
-        a.main-footer__logo(href="/" title="#")
+        a.main-footer__logo(href="#" title="#")
           img(src="img/footer-logo.png" width="372" height="45" alt="Лого. Переход на главную страницу")
 
         .main-footer__info-content
@@ -251,7 +251,7 @@ html(lang="ru")
           .main-footer__copyright 	&copy; Copyright 2017
           ul.main-footer__nav
             li
-              a(href="/" title="#") О компании
+              a(href="#" title="#") О компании
             li
               a(href="contacts.html" title="#") Адрес
             li
